welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: value avance is not a member of Unit
	fleur(Color.RED);avance();avance();avance();avance();fleur(Color.CYAN);recule();droite()avance();avance();gauche();
                                                                                                ^